# projet_finance_quant

./: CryptoPrediction.py  crypto_api.py  pyproject.toml  requirements.txt  webscrapping.py
Old data/: BNB_data.csv  BTC_data.csv  ETH_data.csv  LINK_data.csv  SOL_data.csv  XRP_data.csv
