[project]
name = "projet"
version = "0.1.0"
description = ""
authors = [
    {name = "lazstx",email = "sara.jeantet@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xgboost (>=2.1.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "selenium (>=4.28.1,<5.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
